k8s/your-spotify/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify
  namespace: your-spotify
spec:
  selector:
    matchLabels:
      app: your-spotify
  template:
    metadata:
      labels:
        app: your-spotify
    spec:
      containers:
      - name: your-spotify
        image: lscr.io/linuxserver/your_spotify:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
          - name: https
            containerPort: 443
