k8s/your-spotify/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: your-spotify
  namespace: your-spotify
spec:
  selector:
    app: your-spotify
  ports:
  - port: 443
    targetPort: 443
    name: https
