k8s/your-spotify/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: your-spotify 
  namespace: your-spotify 
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`your-spotify.pycrs.cz`) 
    services:
    - kind: Service
      name: your-spotify
      port: https
  tls: {}
